Added text about me and a headshot

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Lucia</h1>
-    <p>This is me playing around with html text tags</p>
+    <h3>Who am I?</h3>
+    <p>Like the priceless monologue from Lito said, I guess who I am is exactly the same as who you are. No better than, no less than. Because there is no one who has been or will ever be exactly the same as either you or me.</p>
+    <h4>If you see me in the street, come and say Hi!</h4>
+    <img src="https://media.licdn.com/dms/image/D4E03AQExsAkpBUZ4qQ/profile-displayphoto-shrink_400_400/0/1711650345498?e=1727308800&v=beta&t=qBNm4CyKfw-o3NIV6QdtmFz7AnEWVOme0ZerlmgmpiI" 
+        alt="My headshot from LinkedIn">
 </body>
 </html>
