--- a/index.html
+++ b/index.html
@@ -4,13 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Dev Class 1</title>
+    <link rel="stylesheet" href="./index.css">
+    <script src="./index.js" defer></script>
 </head>
 <body>
-    <h1>Lucia</h1>
-    <h3>Who am I?</h3>
-    <p>Like the priceless monologue from Lito said, I guess who I am is exactly the same as who you are. No better than, no less than. Because there is no one who has been or will ever be exactly the same as either you or me.</p>
-    <h4>If you see me in the street, come and say Hi!</h4>
-    <img src="https://media.licdn.com/dms/image/D4E03AQExsAkpBUZ4qQ/profile-displayphoto-shrink_400_400/0/1711650345498?e=1727308800&v=beta&t=qBNm4CyKfw-o3NIV6QdtmFz7AnEWVOme0ZerlmgmpiI" 
-        alt="My headshot from LinkedIn">
+    <div class="flex-container">
+        <!-- <h1 id="name">Lucia</h1>
+        <h3 class="purple">Who am I?</h3>
+        <p- class="purple">Like the priceless monologue from Lito said:
+            I guess who I am is exactly the same as who you are. 
+            No better than, no less than. 
+            Because there is no one who has been or will ever be exactly the same as either you or me.</p>
+        <h4 class="purple">If you see me in the street, come and say Hi!</h4> -->
+        <img src="https://media.licdn.com/dms/image/D4E03AQExsAkpBUZ4qQ/profile-displayphoto-shrink_400_400/0/1711650345498?e=1727308800&v=beta&t=qBNm4CyKfw-o3NIV6QdtmFz7AnEWVOme0ZerlmgmpiI" 
+            alt="My headshot from LinkedIn">
+        <h4 id="banner"> Lucia Galarza</h4>
+        <div>
+            <h1 class="title">My Life</h1>
+            <p class="title">An exercise on absurdity</p>
+        </div>
+        <button id="button" type="button">Read Me!</button>
+    </div>
 </body>
+
 </html>
